# phos

./: .dockerignore  .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  renovate.json
.github/: dependabot.yml
.github/workflows/: ci.yml
android/: .gitignore  openapi.json  phos-release.keystore  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/phos/android/: PhosApplication.kt
android/app/src/main/java/dev/phos/android/data/local/: PhosDatabase.kt  ViewPositionStore.kt
android/app/src/main/java/dev/phos/android/data/local/dao/: FileDao.kt  PersonDao.kt  ShotDao.kt  SyncStateDao.kt
android/app/src/main/java/dev/phos/android/data/local/entity/: FileEntity.kt  PersonEntity.kt  ShotEntity.kt  SyncStateEntity.kt  ViewPositionEntity.kt
android/app/src/main/java/dev/phos/android/data/remote/: AuthInterceptor.kt  BaseUrlInterceptor.kt  PhosApi.kt  PhosAuthenticator.kt
android/app/src/main/java/dev/phos/android/data/repository/: AuthRepository.kt  BrowseRepository.kt  PeopleRepository.kt  SyncRepository.kt  TokenRefreshManager.kt
android/app/src/main/java/dev/phos/android/data/update/: GitHubApi.kt  GitHubRelease.kt  UpdateRepository.kt  UpdateState.kt
android/app/src/main/java/dev/phos/android/di/: AppModule.kt  AuthModule.kt  UpdateModule.kt
android/app/src/main/java/dev/phos/android/domain/model/: MediaFile.kt  Person.kt  Shot.kt
android/app/src/main/java/dev/phos/android/sync/: SyncWorker.kt  UpdateCheckWorker.kt
android/app/src/main/java/dev/phos/android/ui/: MainActivity.kt
android/app/src/main/java/dev/phos/android/ui/auth/: LoginScreen.kt  LoginViewModel.kt
android/app/src/main/java/dev/phos/android/ui/browser/: BrowserScreen.kt  BrowserViewModel.kt
android/app/src/main/java/dev/phos/android/ui/common/: LoadingStates.kt  PhosNavigation.kt  PhosTheme.kt
android/app/src/main/java/dev/phos/android/ui/grid/: PersonGridScreen.kt  PersonGridViewModel.kt
android/app/src/main/java/dev/phos/android/ui/people/: PeopleScreen.kt  PeopleViewModel.kt
android/app/src/main/java/dev/phos/android/ui/settings/: SettingsScreen.kt  SettingsViewModel.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/test/java/dev/phos/android/data/repository/: TokenRefreshManagerTest.kt
android/gradle/: libs.versions.toml
backend/: Cargo.toml  build.rs
backend/migrations/2026-04-02-220730-0000_baseline/: down.sql  up.sql
backend/src/: ai.rs  api.rs  auth.rs  cli_auth.rs  comfyui.rs  db.rs  embedding.rs  import.rs  lib.rs  main.rs  models.rs  organizer.rs  s3.rs  scanner.rs  scanner_tests.rs  schema.rs  virtualfs.rs  watcher.rs  webdav.rs
backend/src/api/: comfyui.rs  faces.rs  files.rs  mod.rs  people.rs  settings.rs  shots.rs  stats.rs  sync.rs
backend/tests/: captioning_test.rs  face_recognition_test.rs
data/: phos.db
docs/: prd-android-client.md
frontend/: index.html  jsconfig.json  package-lock.json  package.json  take_screenshot.js  vite.config.js
frontend/src/: App.vue  router.js  style.css
frontend/src/components/: EnhanceDialog.vue  Gallery.vue  LoginPage.vue  OrganizeDashboard.vue  PeopleList.vue  PersonDetail.vue  PersonNamer.vue  PhotoLightbox.vue  ReviewQueue.vue  ShotCard.vue  ShotDetail.vue  Timeline.vue  VariationsQueue.vue  WorkflowsPage.vue
frontend/src/components/ui/dialog/: Dialog.vue  DialogContent.vue  DialogDescription.vue  DialogHeader.vue  DialogOverlay.vue  DialogTitle.vue  index.js
frontend/src/components/ui/input/: Input.vue
frontend/src/components/ui/label/: Label.vue
frontend/src/components/ui/sheet/: SheetContent.vue  SheetHeader.vue  SheetTitle.vue  index.js
frontend/src/components/ui/tabs/: Tabs.vue  TabsContent.vue  TabsList.vue  TabsTrigger.vue
frontend/src/composables/: useAuth.js
frontend/test/: Gallery.spec.js
helm/phos/: Chart.yaml  values.yaml
helm/phos/templates/: _helpers.tpl  deployment.yaml  externalsecret.yaml  ingress.yaml  pvc.yaml  service.yaml
