[package]
name = "phos-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tempfile = "3.27"
bincode = { version = "3", features = ["serde"] }
axum = { version = "0.8.8", features = ["macros", "multipart"] }
ureq = { version = "3.0", features = ["json"] }
tokio = { version = "1.50", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
sha2 = "0.10"
walkdir = "2.5"
ort = "2.0.0-rc.12"
image = "0.25"
notify = "8.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
uuid = { version = "1.22", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
ffmpeg-next = { version = "8", features = ["build"] }
ndarray = "0.17"
hf-hub = "0.5"
kamadak-exif = "0.6"
clap = { version = "4", features = ["derive"] }
indicatif = "0.18"
rayon = "1.10"
urlencoding = "2"
base64 = "0.22"
openidconnect = "4"
jsonwebtoken = "10"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
dav-server = { version = "0.11", default-features = false, features = ["localfs"] }
tower-service = "0.3"
futures-util = "0.3.32"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
